--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h1>Hi! I'm Ashwin</h1>
+                    <h1>Hello I'm Ashwin</h1>
             </div>
         </div>
     </div>
