--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#experience">experience</a></li>
+                <li><a href="#experience">education</a></li>
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h1>Hello I'm Ashwin</h1>
+                    <h1>Hello, I'm Ashwin</h1>
             </div>
         </div>
     </div>
