--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     </div>
     <!-- ./about -->
     
-    <!-- experience  -->
+    <!-- education  -->
     <div class="section" id="experience">
         <div class="container">
             <div class="col-md-12">
                 <h4>02</h4>
-                <h1 class="size-50">My <br /> Experience</h1>
+                <h1 class="size-50">My <br /> Education</h1>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-12">
@@ -92,37 +92,28 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <p class="timeline-event-thumbnail">August 2018 - June 2022 </p>
+                            <h3>Mission San Jose High School</h3>
+                            <h4>Fremont, CA</h4>
+                            <p><strong>Relevant Courses</strong>
+                                <br>AP Computer Science A, AP Statistics, Digital Imaging</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
-                        </div>
-                    </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                            <p class="timeline-event-thumbnail">August 2022 - Present</p>
+                            <h3>Pennyslvania State University</h3>
+                            <h4>Erie, PA</h4>
+                            <p><strong>Relevant Courses</strong>
+                                <br>OOP with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Calculus II (MATH 141), Matrices (MATH 220)</p>
                         </div>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <!-- ./experience -->
+    <!-- ./education -->
     
     <!-- projects -->
     <div class="section" id="projects">
