--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <h3>Pennyslvania State University</h3>
                             <h4>Erie, PA</h4>
                             <p><strong>Relevant Courses</strong>
-                                <br>OOP with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Calculus II (MATH 141), Matrices (MATH 220)</p>
+                                <br>Object Oriented Programming with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Calculus II (MATH 141), Matrices (MATH 220)</p>
                         </div>
                     </li>
                 </ul>
@@ -130,13 +130,7 @@
                         <!-- portfolio_filter -->
                         <div class="categories-grid wow fadeInLeft">
                             <nav class="categories">
-                                <ul class="portfolio_filter">
-                                    <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".photography">Photography</a></li>
-                                    <li><a href="" data-filter=".logo">Logo</a></li>
-                                    <li><a href="" data-filter=".graphics">Graphics</a></li>
-                                    <li><a href="" data-filter=".ads">Advertising</a></li>
-                                    <li><a href="" data-filter=".fashion">Fashion</a></li>
+                                <ul class="portfolio_filter">                                    
                                 </ul>
                             </nav>
                         </div>
