--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">August 2022 - Present</p>
-                            <h3>Pennyslvania State University</h3>
+                            <h3>The Pennyslvania State University</h3>
                             <h4>Erie, PA</h4>
                             <p><strong>Relevant Courses</strong>
                                 <br>Object Oriented Programming with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Calculus II (MATH 141), Matrices (MATH 220)</p>
@@ -143,7 +143,7 @@
                                 <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion / Logo</em> </div>
+                                            <div class="item_info"> <span>Chess</span> <em>Java & Swing</em> </div>
                                         </div>
                                     </div>
                                 </a>
