--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h1>Hello, I'm Ashwin Konda</h1>
+                    <h1>Hello, I'm Ashwin</h1>
             </div>
         </div>
     </div>
@@ -179,7 +179,7 @@
                                 <a id="demo04" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>WPM Calculator</span> <em>Python</em> </div>
+                                            <div class="item_info"> <h1>WPM Calculator</h1> <h4>Python</h4> </div>
                                         </div>
                                     </div>
                                 </a>
