--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 <a id="demo04" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <h1>WPM Calculator</h1> <h4>Python</h4> </div>
+                                            <div class="item_info"> <span>WPM Calculator</span> <em>Python</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -215,7 +215,7 @@
                 <h3>LinkedIn</h3>
 
                 <ul class="social">
-                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                    <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
                     
                 </ul>
                 <div class="clearfix"></div>
