--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
             <div class="col-md-4" data-aos="fade-up">
 
                 <h3>Phone Number</h3>
-                <p>(510)-480-7456</p>
+                <p>(510) 480-7456</p>
                 <h3>Email</h3>
                 <p>axk6202@psu.edu</p>
                 <h3>LinkedIn</h3>
 
                 <ul class="social">
-                    <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="linkedin.com/in/ashwinkonda"><i class="ion-social-linkedin"></i></a></li>
                     
                 </ul>
                 <div class="clearfix"></div>
