--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <h3>LinkedIn</h3>
 
                 <ul class="social">
-                    <li><a href="linkedin.com/in/ashwinkonda"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ashwinkonda/"><i class="ion-social-linkedin"></i></a></li>
                     
                 </ul>
                 <div class="clearfix"></div>
