--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h4>01</h4>
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
+                <p>I'm Ashwin Konda, an undergraduate sophomore at Penn State University majoring in Computer Science. My interest in coding dates back to my early years, instilling in me a lasting passion for technology. With a strong desire to thrive in the tech industry, I am committed to deepening my understanding of software engineering and actively participating in its evolving landscape.</p>
                 <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
                 <div class="h-50"></div>
