--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="col-md-6" data-aos="fade-up">
                 <h4>01</h4>
-                <h1 class="size-50"><br/>About me</h1>
+                <h1 class="size-50">About me</h1>
                 <div class="h-50"></div>
                 <p>Hi I'm Ashwin Konda, an undergraduate sophomore at Penn State University majoring in Computer Science. My interest in coding dates back to my early years, instilling in me a lasting passion for technology. With a strong desire to thrive in the tech industry, I am committed to deepening my understanding of software engineering.</p>
                 <p>Beyond my academic pursuits, I have taken proactive steps to enhance my skills. I've engaged in personal projects, hackathons, and coding challenges that have bolstered my problem-solving abilities. Additionally, I'm intrigued by the transformative potential of Artificial Intelligence and Machine Learning, and I'm excited to delve into these domains as part of my journey to remain at the forefront of innovation.</p>
