--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <h3>The Pennyslvania State University</h3>
                             <h4>Erie, PA</h4>
                             <p><strong>Relevant Courses</strong>
-                                <br>Object Oriented Programming with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Calculus II (MATH 141), Matrices (MATH 220)</p>
+                                <br>OOP with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Calculus II (MATH 141), Matrices (MATH 220)</p>
                         </div>
                     </li>
                 </ul>
