--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h4>01</h4>
                 <h1 class="size-50">About me</h1>
                 <div class="h-50"></div>
-                <p>Hi I'm Ashwin Konda, an undergraduate sophomore at Penn State University pursuing a B.S. in Computer Science. With a firm belief that technology has the power to reshape the world, I have been committed to honing my skills and knowledge in this field. </p>
+                <p>Hi I'm Ashwin Konda, an undergraduate sophomore at Penn State University pursuing a B.S. in Computer Science. With a firm belief that technology has the power to reshape the world, I have been committed to honing my skills and knowledge in this dynamic field. </p>
                 <p>Beyond my academic pursuits, I have taken proactive steps to enhance my skills. I've engaged in personal projects, hackathons, and coding challenges that have bolstered my problem-solving abilities. Additionally, I'm intrigued by the transformative potential of Artificial Intelligence and Machine Learning, and I'm excited to delve into these domains as part of my journey to remain at the forefront of innovation.</p>
                 <div class="h-50"></div>
             </div>
@@ -223,7 +223,31 @@
     </div>
     <!-- ./contact -->
 
-
+    <!--DEMO01-->
+    <div id="animatedModal" class="popup-modal">
+        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
+        <div id="btn-close-modal" class="close-animatedModal close-popup-modal"> <i class="ion-close-round"></i> </div>
+        <div class="clearfix"></div>
+        <div class="modal-content">
+            <div class="container">
+                <div class="portfolio-padding">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h2>Geschäfts Eines<br /> Web-Studios</h2>
+                        <div class="h-50"></div>
+                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
+                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <br />
+                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
+                        <br />
+                        <br />
+                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
+                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <br />
+                        <br /> </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!--  plugins  -->
