--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
     <!-- ./contact -->
 
     <!--DEMO01-->
-    <div id="animatedModal" class="popup-modal">
-        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
+    <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
+    <!--<div id="animatedModal" class="popup-modal">
         <div id="btn-close-modal" class="close-animatedModal close-popup-modal"> <i class="ion-close-round"></i> </div>
         <div class="clearfix"></div>
         <div class="modal-content">
@@ -247,7 +247,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!--  plugins  -->
