--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6  fashion logo">
-                                 <!--href="#animatedModal"--> <a id="demo01" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
+                                 <!--href="#animatedModal"  id="demo01"--> <a class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Chess</span> <em>Java & Swing</em> </div>
