--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h4>01</h4>
                 <h1 class="size-50">About me</h1>
                 <div class="h-50"></div>
-                <p>Hi I'm Ashwin Konda, an undergraduate sophomore at Penn State University pursuing a B.S. in Computer Science. With a firm belief that technology has the power to reshape the world, I have been committed to honing my skills and knowledge in this dynamic field. </p>
+                <p>Hi I'm Ashwin Konda, an undergraduate sophomore at Penn State University pursuing a B.S. in Computer Science. With a firm belief that technology has the power to reshape the world. I am apart of the Computer Science Club with the intention of honing my skills and knowledge in this field. </p>
                 <p>Beyond my academic pursuits, I have taken proactive steps to enhance my skills. I've engaged in personal projects, hackathons, and coding challenges that have bolstered my problem-solving abilities. Additionally, I'm intrigued by the transformative potential of Artificial Intelligence and Machine Learning, and I'm excited to delve into these domains as part of my journey to remain at the forefront of innovation.</p>
                 <div class="h-50"></div>
             </div>
