--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <h4>01</h4>
                 <h1 class="size-50">About me</h1>
                 <div class="h-50"></div>
-                <p>Hi I'm Ashwin Konda, an undergraduate sophomore at Penn State University pursuing a B.S. in Computer Science. With a firm belief that technology has the power to reshape the world. I am apart of the Computer Science Club with the intention of honing my skills and knowledge in this field. </p>
-                <p>Beyond my academic pursuits, I have taken proactive steps to enhance my skills. I've engaged in personal projects, hackathons, and coding challenges that have bolstered my problem-solving abilities. Additionally, I'm intrigued by the transformative potential of Artificial Intelligence and Machine Learning, and I'm excited to delve into these domains as part of my journey to remain at the forefront of innovation.</p>
+                <p>Hi I'm Ashwin Konda, an undergraduate sophomore at Penn State University pursuing a B.S. in Computer Science. I have a firm belief that technology has the power to further reshape the world. It can assist with both the simplest of tasks and those so complex that they defy human comprehension. This is why I am a part of the Computer Science Club, with the intention of honing my skills and knowledge in this field. </p>
+                <p>Beyond my academic pursuits, I have taken proactive steps to enhance my skills. I've engaged in personal projects, hackathons, and coding challenges that have bolstered my problem-solving abilities. Additionally, I'm intrigued by the transformative potential of Artificial Intelligence and Machine Learning, and I'm excited to delve into these domains as part of my journey.</p>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
@@ -94,7 +94,7 @@
                             <h3>The Pennyslvania State University</h3>
                             <h4>Erie, PA</h4>
                             <p><strong>Relevant Courses</strong>
-                                <br>OOP with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Calculus II (MATH 141), Matrices (MATH 220)</p>
+                                <br>OOP with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Elementary Probability (STAT 318), Calculus II (MATH 141), Matrices (MATH 220)</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up">
