--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <a class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Coin-Flip Game</span> <em>C++</em> </div>
+                                            <div class="item_info"> <span>Coin-Flip Game</span> <p>hellow</p> <em>C++</em> </div>
                                         </div>
                                     </div>
                                 </a>
