--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+    .col-md-4.col-sm-6.photography p {
+        color: white;
+    }
+</style>
+
 </head>
 
 <body>
