--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@
                                 <a class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Coin-Flip Game</span> <p>hellow</p> <em>C++</em> </div>
+                                            <div class="item_info"> <span>Coin-Flip Game</span> <p>Developed a C++ coin-flip game that rewards 
+                                                players with points for achieving more than three consecutive tails while implementing fail-safe 
+                                                measures to end the game immediately if a head appears. Ensured unbiased randomness 
+                                                by displaying a 100-flip example to the user.</p> <em>C++</em> </div>
                                         </div>
                                     </div>
                                 </a>
