--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     .col-md-4.col-sm-6.photography p {
         color: white;
     }
+        .portfolio_item_hover:hover {
+    background-color: #your-color; /* Change to the desired background color */
+    transition: background-color 0.3s ease; /* Add a smooth transition effect */
+}
+
 </style>
 
 </head>
