--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">August 2022 - Present</p>
-                            <h3>The Pennyslvania State University</h3>
-                            <h4>Erie, PA</h4>
-                            <p><strong>Relevant Courses</strong>
-                                <br>OOP with Web-Based Applications (CMPSC 221), Intermediate Programming (CMPSC 122), Introduction to Programming Techniques (CMPSC 121), Database Management Systems (MIS 336), Elementary Probability (STAT 318), Calculus II (MATH 141), Matrices (MATH 220)</p>
+                            <h3>Pennyslvania State University--University Park</h3>
+                            <h4>University Park, PA</h4>
+                            <p><strong>Relevant Coursework</strong>
+                                <br>Data Structures & Algorithms, Database Management Systems, Discrete Mathematics, Web Development, 
+                                Probability & Statistics, Multivariate Calculus, Linear Algebra</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up">
@@ -100,7 +101,7 @@
                             <p class="timeline-event-thumbnail">August 2018 - June 2022 </p>
                             <h3>Mission San Jose High School</h3>
                             <h4>Fremont, CA</h4>
-                            <p><strong>Relevant Courses</strong>
+                            <p><strong>Relevant Coursework</strong>
                                 <br>AP Computer Science A, AP Statistics, Digital Imaging</p>
                         </div>
                     </li>
